ft(fixes): some touches to the frontend (#17)
- fix footer
- fix responsiveness on different devices
- style scrollbar
- embed twitter follow button
- update about.js file
- back to top button intergration
- fixed size to single articles
- fix size for posts on devices
- add a new docker logo
- contact form to have autofocus
- remove pagination as it complicated a lot of issues on the frontend
- add link to discord server
- add 404 page
- remove slack link
- remove twitter buttons makin site slow

[Delivers #166561798]

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -37,6 +37,9 @@
     color: #dfa612;
 }
 
+.s-link:hover {
+    cursor: pointer;
+}
 @media (max-width: 500px) {
     .footer {
         padding-top: 20%;
@@ -53,5 +56,62 @@
         float: none;
         text-align: center;
         padding-right: 15% !important;
+    }
+}
+
+@media (max-width: 400px) {
+    .footer {
+        padding-top: 20%;
+    }
+
+    .footer-extra {
+        padding-top: 5%;
+        padding-bottom: 5px;
+        padding-right: 30% !important;
+        
+    }
+
+    .l-act {
+        float: none;
+        text-align: center;
+        padding-right: 15% !important;
+    }
+}
+
+@media (max-width: 700px) {
+    .footer {
+        padding-top: 20%;
+    }
+
+    .footer-extra {
+        padding-top: 5%;
+        padding-bottom: 5px;
+        padding-right: 35% !important;
+        
+    }
+
+    .l-act {
+        float: none;
+        text-align: center;
+        /* padding-right: 15% !important; */
+    }
+}
+
+@media (max-width: 320px) {
+    .footer {
+        padding-top: 20%;
+    }
+
+    .footer-extra {
+        padding-top: 5%;
+        padding-bottom: 5px;
+        padding-right: 35% !important;
+        
+    }
+
+    .l-act {
+        float: none;
+        text-align: center;
+        padding-right: 10% !important;
     }
 }
